--- a/style.css
+++ b/style.css
@@ -1,3 +1,56 @@
-#dig{
-	margin: 50px 0;
+html, body, .container, #main {
+    height: 100%;   
+}
+
+html {
+    background-image: url("img/bg.png");
+}
+
+body {
+    background-color: transparent!important;
+}
+
+h4 {
+    margin-bottom: 3px;
+}
+
+p, h4, h2 {
+    color: white;
+}
+
+button {
+    color: black;
+}
+
+#left-col {
+    height: 100%;
+    background-color: black;
+    text-align: center;
+}
+
+#big-diamond {
+	height: 256px;
+    width: 256px;
+    margin: auto;
+    position: absolute;
+    top: 200px;
+    right: 160px;
+}
+    
+.item-thumb {
+    width: 64px;
+    height: 64px;
+    margin-right: 10px;
+    float: left;
+}
+
+.price-icon {
+    width: 16px;
+    height: 16px;
+    float: left;
+}
+
+.buy, .sell {
+    margin: 20px 20px 0 0;
+    float: right;   
 }
